--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,10 @@
 
 html, body {
   font-family: var(--font-body);
+  overflow-y:visible;
+  scrollbar-gutter: stable;
   @apply bg-neutral-950 text-neutral-100;
+
 }
 
 .section-title,
